--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
    - docker
 
 before_install:
-   - docker build -t testdev -f Dockerfile.dev
+   - docker build -t testdev -f Dockerfile.dev .
 
 script:
    - docker run testdev npm run test -- --coverage
